Imágenes en programas de presentación listas

--- a/html/store.html
+++ b/html/store.html
@@ -310,20 +310,22 @@
                         <h2>Programas b&aacute;sicos</h2>
                     </div>
 
-                    <ul class="programas-presentacion">
-                        <li id="slide-pre1">
-                            <img src="../assets/img/programs/chrome.jpg" alt="">
-                        </li>
-                        <li id="slide-pre1">
-                            <img src="../assets/img/programs/chrome.jpg" alt="">
-                        </li>
-                        <li id="slide-pre1">
-                            <img src="../assets/img/programs/chrome.jpg" alt="">
-                        </li>
-                        <li id="slide-pre1">
-                            <img src="../assets/img/programs/chrome.jpg" alt="">
-                        </li>
-                    </ul>
+                    <div class="programas-presentacion">
+                        <ul>
+                            <li id="slide-pre1">
+                                <img src="../assets/img/programs/chrome.jpg" alt="">
+                            </li>
+                            <li id="slide-pre1">
+                                <img src="../assets/img/programs/chrome.jpg" alt="">
+                            </li>
+                            <li id="slide-pre1">
+                                <img src="../assets/img/programs/chrome.jpg" alt="">
+                            </li>
+                            <li id="slide-pre1">
+                                <img src="../assets/img/programs/chrome.jpg" alt="">
+                            </li>
+                        </ul>
+                    </div>
 
                     <ul class="menu-programas">
                         <li>
