Listado de programas listo

--- a/html/store.html
+++ b/html/store.html
@@ -313,34 +313,20 @@
                     <div class="programas-presentacion">
                         <ul>
                             <li id="slide-pre1">
-                                <img src="../assets/img/programs/chrome.jpg" alt="">
+                                <img src="../assets/img/programs/chrome.svg" alt="">
                             </li>
                             <li id="slide-pre1">
-                                <img src="../assets/img/programs/chrome.jpg" alt="">
+                                <img src="../assets/img/programs/firefox.svg" alt="">
                             </li>
                             <li id="slide-pre1">
-                                <img src="../assets/img/programs/chrome.jpg" alt="">
+                                <img src="../assets/img/programs/excel.svg" alt="">
                             </li>
                             <li id="slide-pre1">
-                                <img src="../assets/img/programs/chrome.jpg" alt="">
+                                <img src="../assets/img/programs/word.svg" alt="">
                             </li>
+
                         </ul>
                     </div>
-
-                    <ul class="menu-programas">
-                        <li>
-                            <a href="#slide-pre1">1</a>
-                        </li>
-                        <li>
-                            <a href="#slide-pre2">2</a>
-                        </li>
-                        <li>
-                            <a href="#slide-pre3">3</a>
-                        </li>
-                        <li>
-                            <a href="#slide-pre4">4</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -502,7 +488,7 @@
 
         <div class="info-desa">
             <h3>Desarrollado por Juli&aacute;n España</h3>
-            <h3>T&eacute;cnico en sistemas </h3>
+            <h3>T&eacute;cnico en sistemas - SENA</h3>
             <h3>Colón, Putumayo</h3>
             <!-- <h3><img src="../assets/img/sena.png" alt=""></h3> -->
         </div>
@@ -516,6 +502,15 @@
             <!-- <div class="logo">
                 <img src="assets/img/logo-pestaña.png" alt="Logo de mi empresa" title="IntellArtStore">
             </div> -->
+        </div>
+
+        <div class="fuentes">
+            <p>
+
+                Icons made by
+                <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com
+                </a>
+            </p>
         </div>
 
     </footer>
