Arreglando distribución de elementos para 768px

--- a/html/store.html
+++ b/html/store.html
@@ -505,8 +505,8 @@
         </div>
 
         <div class="fuentes">
+            <h3>Fuentes:</h3>
             <p>
-
                 Icons made by
                 <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com
                 </a>
