--- a/html/store.html
+++ b/html/store.html
@@ -508,7 +508,7 @@
             <h3>Fuentes:</h3>
             <p>
                 Icons made by
-                <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com
+                <a href="https://www.freepik.com" target="_blank" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com
                 </a>
             </p>
         </div>
