Acabando de diseñar página de tienda

--- a/html/store.html
+++ b/html/store.html
@@ -106,16 +106,16 @@
                     <input type="radio" name="radio-btn" id="radio4">
 
                     <div class="slide first">
-                        <img src="../assets/img/presentacion/p1.gif" alt="">
+                        <img src="../assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
                     <div class="slide">
-                        <img src="../assets/img/ArticulosChina/Microfono/1.jpg" alt="">
+                        <img src="../assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
                     <div class="slide">
-                        <img src="../assets/img/ArticulosChina/Microfono/2.jpg" alt="">
+                        <img src="../assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
                     <div class="slide">
-                        <img src="../assets/img/ArticulosChina/Microfono/3.jpg" alt="">
+                        <img src="../assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
 
                     <div class="navigation-auto">
@@ -172,7 +172,7 @@
 
                 </div>
 
-                <div class="titulo-computadores" id="accesorios-laptop">
+                <div class="titulo" id="accesorios-laptop">
                     <h2>Accesorios para computadores</h2>
                 </div>
                 <div class="pc">
@@ -242,6 +242,29 @@
                         <img src="../assets/img/ArticulosCali/RouterTP-LinkWR940N/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
+                </div>
+
+                <div class="titulo" id="books">
+                    <h2>Libros usados</h2>
+                </div>
+                <div class="pc">
+
+                    <div class="accesorio-pc">
+                        <h3>Cable USB 3.0 extensor </h3>
+                        <img src="../assets/img/accesorios/books/1.svg" alt="" title="Antena TP-Link USB wifi">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                    </div>
+                    <div class="accesorio-pc">
+                        <h3>Cable USB 3.0 extensor </h3>
+                        <img src="../assets/img/accesorios/books/2.svg" alt="" title="Antena TP-Link USB wifi">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                    </div>
+                    <div class="accesorio-pc">
+                        <h3>Cable USB 3.0 extensor </h3>
+                        <img src="../assets/img/accesorios/books/3.svg" alt="" title="Antena TP-Link USB wifi">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                    </div>
+
                 </div>
             </div>
             <div class="formateo" id="formateo">
