--- a/html/store.html
+++ b/html/store.html
@@ -26,6 +26,13 @@
                 </li>
             </ul>
         </div>
+        <div id="menu-h">
+            <ul>
+                <li>
+                    <a href="../html/profile.html" class="inicio">Mi perfil</a>
+                </li>
+            </ul>
+        </div>
 
         <div id="menu-h">
 
@@ -38,6 +45,7 @@
                     <ul class="sub-menu">
                         <a href="#accesorios-celular">Accesorios celulares</a>
                         <a href="#accesorios-laptop">Accesorios computadores</a>
+                        <a href="#books">Libros usados</a>
                     </ul>
 
                 </li>
@@ -66,7 +74,7 @@
                 </li>
             </ul>
         </div>
-
+        <!-- 
         <div id="menu-h">
             <ul>
                 <li>
@@ -85,7 +93,7 @@
 
                 </li>
             </ul>
-        </div>
+        </div> -->
 
     </header>
 
