--- a/html/store.html
+++ b/html/store.html
@@ -45,7 +45,7 @@
                     <ul class="sub-menu">
                         <a href="#accesorios-celular">Accesorios celulares</a>
                         <a href="#accesorios-laptop">Accesorios computadores</a>
-                        <a href="#books">Libros usados</a>
+                        <a href="#books">Libros 2da</a>
                     </ul>
 
                 </li>
@@ -253,7 +253,7 @@
                 </div>
 
                 <div class="titulo" id="books">
-                    <h2>Libros usados</h2>
+                    <h2>Libros 2da</h2>
                 </div>
                 <div class="libros">
 
