Quitando la página de inicio

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <main class="contenido">
 
         <div class="logo">
-            <img src="../assets/img/Logo.png" alt="Logo de la tienda">
+            <img src="assets/img/Logo.png" alt="Logo de la tienda">
         </div>
 
         <div class="presentacion">
@@ -82,16 +82,16 @@
                     <input type="radio" name="radio-btn" id="radio4">
 
                     <div class="slide first">
-                        <img src="../assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                        <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
                     <div class="slide">
-                        <img src="../assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                        <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
                     <div class="slide">
-                        <img src="../assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                        <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
                     <div class="slide">
-                        <img src="../assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
+                        <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
 
                     <div class="navigation-auto">
@@ -349,7 +349,7 @@
             if (counter > 4) {
                 counter = 1;
             }
-        }, 5000)
+        }, 3000)
 
         // --------------------------------------------------
 
