Acomodando los enlaces hover

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 
             <div class="slider">
                 <div class="slides">
-
                     <input type="radio" name="radio-btn" id="radio1">
                     <input type="radio" name="radio-btn" id="radio2">
                     <input type="radio" name="radio-btn" id="radio3">
@@ -277,6 +276,9 @@
                             <div class="sistemas">
                                 <h4>Ubuntu</h4>
                                 <img src="../assets/img/sistemas/linux/ubuntu.png" alt="">
+                                <p>
+                                    Distribuci&oacute;n más conocida y utilizada de la familia de Linux
+                                </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Debian</h4>
