Colocando descripción de distros Linux

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                     <ul class="sub-menu">
                         <a href="#accesorios-celular">Accesorios celulares</a>
                         <a href="#accesorios-laptop">Accesorios computadores</a>
-                        <a href="#books">Libros 2da</a>
                     </ul>
 
                 </li>
@@ -283,30 +282,51 @@
                             <div class="sistemas">
                                 <h4>Debian</h4>
                                 <img src="../assets/img/sistemas/linux/debian.png" alt="">
+                                <p>
+                                    Distribuci&oacute;n antigua, popular y estable que ha sido creado por la comunidad
+                                </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Linux Mint</h4>
                                 <img src="../assets/img/sistemas/linux/mint.png" alt="">
+                                <p>
+                                    Basada en Ubuntu, pero con mayor velocidad diseñada para usuarios poco experimentados
+                                </p>
                             </div>
                             <div class="sistemas">
                                 <h4>KDE Neon</h4>
                                 <img src="../assets/img/sistemas/linux/kde_neon.png" alt="">
+                                <p>
+                                    Distribuci&oacute;n derivada de Ubuntu que se mantiene actualizado
+                                </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Arch Linux</h4>
                                 <img src="../assets/img/sistemas/linux/arch.png" alt="">
+                                <p>
+                                    Distribuci&oacute;n ligera que requiere conocimientos avanzados
+                                </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Manjaro</h4>
                                 <img src="../assets/img/sistemas/linux/manjaro.png" alt="">
+                                <p>
+                                    Ideal para principiantes que vengan de Windows, su interfaz es similar
+                                </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Suse</h4>
                                 <img src="../assets/img/sistemas/linux/suse.png" alt="">
+                                <p>
+                                    Distribuci&oacute;n más antigua e importante que está orientada al mundo corporativo
+                                </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Fedora</h4>
                                 <img src="../assets/img/sistemas/linux/fedora.png" alt="">
+                                <p>
+                                    Distribuci&oacute;n para los que quieren iniciar en el entorno de Linux
+                                </p>
                             </div>
                         </div>
                     </div>
