--- a/index.html
+++ b/index.html
@@ -120,27 +120,27 @@
 
                     <div class="accesorio-celular">
                         <h3>Tarjeta de memoria 16 gigas</h3>
-                        <img src="../assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi">
+                        <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cargador Tipo V</h3>
-                        <img src="../assets/img/Otros artículos/CargadorMotorla/2.png" alt="">
+                        <img src="assets/img/Otros artículos/CargadorMotorla/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Funda de silicona para iPhone</h3>
-                        <img src="../assets/img/ArticulosChina/fundaSiliconaiPhone/1172719552-1218911102.jpg" alt="">
+                        <img src="assets/img/ArticulosChina/fundaSiliconaiPhone/1172719552-1218911102.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cable Carga Rápida Tipo V</h3>
-                        <img src="../assets/img/ArticulosChina/cargadorcelularusb/3327367131298838601.jpg" alt="">
+                        <img src="assets/img/ArticulosChina/cargadorcelularusb/3327367131298838601.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cable USB Carga Rápida para iPhone</h3>
-                        <img src="../assets/img/ArticulosChina/CableusbiPhone/3.jpg" alt="">
+                        <img src="assets/img/ArticulosChina/CableusbiPhone/3.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
 
@@ -153,67 +153,67 @@
 
                     <div class="accesorio-pc">
                         <h3>Cable USB 3.0 extensor </h3>
-                        <img src="../assets/img/ArticulosChina/adaptadorusb/3.jpg" alt="" title="Antena TP-Link USB wifi">
+                        <img src="assets/img/ArticulosChina/adaptadorusb/3.jpg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Cargador Lenovo Serie G-40</h3>
-                        <img src="../assets/img/ArticulosChina/cargadorLenovo/2.jpg" alt="">
+                        <img src="assets/img/ArticulosChina/cargadorLenovo/2.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>USB 3.0 16 gigas</h3>
-                        <img src="../assets/img/ArticulosChina/memoriausb3.0/1.png" alt="">
+                        <img src="assets/img/ArticulosChina/memoriausb3.0/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Micr&oacute;fono</h3>
-                        <img src="../assets/img/ArticulosChina/Microfono/1.jpg" alt="">
+                        <img src="assets/img/ArticulosChina/Microfono/1.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Memoria RAM 2gb</h3>
-                        <img src="../assets/img/ArticulosChina/ram2gb/ram3.JPG" alt="">
+                        <img src="assets/img/ArticulosChina/ram2gb/ram3.JPG" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Mouse inal&aacute;mbrico</h3>
-                        <img src="../assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
+                        <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Teclado Genius básico</h3>
-                        <img src="../assets/img/ArticulosChina/teclado/2.png" alt="">
+                        <img src="assets/img/ArticulosChina/teclado/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Adaptador USB para WiFi</h3>
-                        <img src="../assets/img/ArticulosCali/AdaptadorWifiUSB/2.png" alt="">
+                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Batería recargable</h3>
-                        <img src="../assets/img/ArticulosCali/Bateríaportátil/3.png" alt="">
+                        <img src="assets/img/ArticulosCali/Bateríaportátil/3.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Mouse inal&aacute;mbrico</h3>
-                        <img src="../assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
+                        <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Mouse LogiTech al&aacute;mbrico</h3>
-                        <img src="../assets/img/ArticulosCali/MouseM90/2.png" alt="">
+                        <img src="assets/img/ArticulosCali/MouseM90/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Router TP-Link WR840 </h3>
-                        <img src="../assets/img/ArticulosCali/RouterTP-LinkWR840/1.png" alt="">
+                        <img src="assets/img/ArticulosCali/RouterTP-LinkWR840/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Router TP-Link WR940N </h3>
-                        <img src="../assets/img/ArticulosCali/RouterTP-LinkWR940N/1.png" alt="">
+                        <img src="assets/img/ArticulosCali/RouterTP-LinkWR940N/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                 </div>
