Diseñando desde Mint

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- subiendo -->
     <i class="icon-menu burger-button" id="burger-menu"></i>
 
     <header class="header">
