Creando la rama main para subir archivos a GitHub

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- subiendo -->
+    <!-- eliminando la rama master -->
     <i class="icon-menu burger-button" id="burger-menu"></i>
 
     <header class="header">
