--- a/index.html
+++ b/index.html
@@ -255,15 +255,15 @@
                         <div class="windows-distribuciones">
                             <div class="sistemas">
                                 <h4>Windows 7</h4>
-                                <img src="../assets/img/sistemas/windows/w7.png" alt="">
+                                <img src="assets/img/sistemas/windows/w7.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Windows 8.1</h4>
-                                <img src="../assets/img/sistemas/windows/w8.1.png" alt="">
+                                <img src="assets/img/sistemas/windows/w8.1.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Windows 10</h4>
-                                <img src="../assets/img/sistemas/windows/w10.png" alt="">
+                                <img src="assets/img/sistemas/windows/w10.png" alt="">
                             </div>
                         </div>
                     </div>
