Acabando de subir las demás imágenes

--- a/index.html
+++ b/index.html
@@ -275,56 +275,56 @@
                         <div class="linux-distribuciones">
                             <div class="sistemas">
                                 <h4>Ubuntu</h4>
-                                <img src="../assets/img/sistemas/linux/ubuntu.png" alt="">
+                                <img src="assets/img/sistemas/linux/ubuntu.png" alt="">
                                 <p>
                                     Distribuci&oacute;n más conocida y utilizada de la familia de Linux
                                 </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Debian</h4>
-                                <img src="../assets/img/sistemas/linux/debian.png" alt="">
+                                <img src="assets/img/sistemas/linux/debian.png" alt="">
                                 <p>
                                     Distribuci&oacute;n antigua, popular y estable que ha sido creado por la comunidad
                                 </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Linux Mint</h4>
-                                <img src="../assets/img/sistemas/linux/mint.png" alt="">
+                                <img src="assets/img/sistemas/linux/mint.png" alt="">
                                 <p>
                                     Basada en Ubuntu, pero con mayor velocidad diseñada para usuarios poco experimentados
                                 </p>
                             </div>
                             <div class="sistemas">
                                 <h4>KDE Neon</h4>
-                                <img src="../assets/img/sistemas/linux/kde_neon.png" alt="">
+                                <img src="assets/img/sistemas/linux/kde_neon.png" alt="">
                                 <p>
                                     Distribuci&oacute;n derivada de Ubuntu que se mantiene actualizado
                                 </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Arch Linux</h4>
-                                <img src="../assets/img/sistemas/linux/arch.png" alt="">
+                                <img src="assets/img/sistemas/linux/arch.png" alt="">
                                 <p>
                                     Distribuci&oacute;n ligera que requiere conocimientos avanzados
                                 </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Manjaro</h4>
-                                <img src="../assets/img/sistemas/linux/manjaro.png" alt="">
+                                <img src="assets/img/sistemas/linux/manjaro.png" alt="">
                                 <p>
                                     Ideal para principiantes que vengan de Windows, su interfaz es similar
                                 </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Suse</h4>
-                                <img src="../assets/img/sistemas/linux/suse.png" alt="">
+                                <img src="assets/img/sistemas/linux/suse.png" alt="">
                                 <p>
                                     Distribuci&oacute;n más antigua e importante que está orientada al mundo corporativo
                                 </p>
                             </div>
                             <div class="sistemas">
                                 <h4>Fedora</h4>
-                                <img src="../assets/img/sistemas/linux/fedora.png" alt="">
+                                <img src="assets/img/sistemas/linux/fedora.png" alt="">
                                 <p>
                                     Distribuci&oacute;n para los que quieren iniciar en el entorno de Linux
                                 </p>
@@ -341,16 +341,16 @@
                     <div class="programas-presentacion">
                         <ul>
                             <li id="slide-pre1">
-                                <img src="../assets/img/programs/chrome.svg" alt="">
+                                <img src="assets/img/programs/chrome.svg" alt="">
                             </li>
                             <li id="slide-pre1">
-                                <img src="../assets/img/programs/firefox.svg" alt="">
+                                <img src="assets/img/programs/firefox.svg" alt="">
                             </li>
                             <li id="slide-pre1">
-                                <img src="../assets/img/programs/excel.svg" alt="">
+                                <img src="assets/img/programs/excel.svg" alt="">
                             </li>
                             <li id="slide-pre1">
-                                <img src="../assets/img/programs/word.svg" alt="">
+                                <img src="assets/img/programs/word.svg" alt="">
                             </li>
 
                         </ul>
