Cambiando ubicación de imágenes de redes

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             <div class="sistemas">
                                 <h4>Ubuntu</h4>
                                 <img src="assets/img/sistemas/linux/ubuntu.png" alt="">
-                                <p>
+                                <p id="descrip">
                                     Distribuci&oacute;n más conocida y utilizada de la familia de Linux
                                 </p>
                             </div>
@@ -361,6 +361,9 @@
     </main>
 
     <script>
+        //hover para distros Linux--------------------------------------------------
+
+
         // --------------------------------------------------
         // script para presentacion de accesorios, trabajos, accesorios nuevos, etcétera
 
@@ -524,9 +527,9 @@
         <div class="social-desa">
             <h1>Cont&aacute;ctame:</h1>
             <h3>julii1295@gmail.com</h3>
-            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="../assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
-            <a href="https://twitter.com/julialexes" target="_blank"><img src="../assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a>
-            <a href="https://wa.me/c/573174503604"><img src="../assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp"></a>
+            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
+            <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a>
+            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp"></a>
         </div>
 
         <div class="fuentes">
