Quitando red social Twitter de mi perfil y cambiando color a los contenedores de mi tiempo

--- a/html/profile.html
+++ b/html/profile.html
@@ -8,7 +8,6 @@
     <title>Mi perfil</title>
 
     <link rel=" stylesheet " href="css/font/flaticon.css ">
-    <link rel="icon " href="assets/img/logo-pestaña.ico ">
 
     <!-- logo de pestaña  -->
     <link rel="icon" href="../assets/img/logo-pestaña.ico">
@@ -17,8 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../mediaquery_perfil/profile.css">
-
-    <!-- <link rel="stylesheet" href="../mediaquery_perfil/tablet.css" media="(min-width: 700px)"> -->
 </head>
 
 <body>
@@ -103,7 +100,7 @@
             <h2>Cont&aacute;ctame:</h2>
             <h3>julii1295@gmail.com</h3>
             <a href="https://www.facebook.com/alex.rio20/ " target="_blank "><img src="../assets/img/facebook.png " alt="Enlace de red social Facebook" title="Mi perfil en Facebook "></a>
-            <a href="https://twitter.com/julialexes " target="_blank "><img src="../assets/img/network/twitter.svg" alt="Enlace de red social Twitter"></a>
+            <!-- <a href="https://twitter.com/julialexes " target="_blank "><img src="../assets/img/network/twitter.svg" alt="Enlace de red social Twitter"></a> -->
             <a href="https://wa.me/c/573174503604 "><img src="../assets/img/whatsapp.png " alt="Enlace de red social WhatsApp"></a>
         </div>
 
