--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             <h1>Cont&aacute;ctame:</h1>
             <h3>julii1295@gmail.com</h3>
             <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
-            <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a>
+            <!-- <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a> -->
             <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp"></a>
         </div>
 
