Colocando los enlaces correctamente

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <div id="menu-h">
             <ul>
                 <li>
-                    <a href="../index.html" class="inicio">Inicio</a>
+                    <a href="index.html" class="inicio">Inicio</a>
                 </li>
             </ul>
         </div>
         <div id="menu-h">
             <ul>
                 <li>
-                    <a href="../html/profile.html" class="inicio">Mi perfil</a>
+                    <a href="html/profile.html" class="inicio">Mi perfil</a>
                 </li>
             </ul>
         </div>
