--- a/html/profile.html
+++ b/html/profile.html
@@ -15,6 +15,7 @@
     <!-- tipo de letra  -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
+    <!-- estilos -->
     <link rel="stylesheet" href="../mediaquery_perfil/profile.css">
 </head>
 
