Quitando enlaces aún no terminados

--- a/html/profile.html
+++ b/html/profile.html
@@ -24,15 +24,15 @@
 
     <header class="contenedor-header">
 
-        <div class="header1 ">
+        <!-- <div class="header1 ">
             <a href="../index.html" class="inicio ">Inicio</a>
-        </div>
+        </div> -->
         <div class="header1 ">
-            <a href="store.html" class="inicio ">Tienda</a>
+            <a href="../index.html" class="inicio ">Tienda</a>
         </div>
-        <div class="header1 ">
+        <!-- <div class="header1 ">
             <a href="blogs.html" class="inicio ">Mi Blog</a>
-        </div>
+        </div> -->
     </header>
 
     <main class="contenido ">
