--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
+
     <!-- <link rel="stylesheet" href="css/store.css"> -->
     <link rel="stylesheet" href="css/storeia.css">
 
@@ -57,7 +58,7 @@
                     <ul class="sub-menu">
                         <a href="#formateo">Formateo</a>
                         <a href="#formateo">Mantenimiento de computadores</a>
-                        <a href="#desarrollador-web">Desarrollo de p&aacute;ginas web</a>
+                        <!-- <a href="#desarrollador-web">Desarrollo de p&aacute;ginas web</a> -->
                     </ul>
 
                 </li>
@@ -76,14 +77,14 @@
             <div class="slider">
                 <div class="slides">
                     <input type="radio" name="radio-btn" id="radio1">
-                    <input type="radio" name="radio-btn" id="radio2">
+                    <!-- <input type="radio" name="radio-btn" id="radio2">
                     <input type="radio" name="radio-btn" id="radio3">
-                    <input type="radio" name="radio-btn" id="radio4">
+                    <input type="radio" name="radio-btn" id="radio4"> -->
 
                     <div class="slide first">
                         <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
-                    <div class="slide">
+                    <!-- <div class="slide">
                         <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
                     <div class="slide">
@@ -91,20 +92,20 @@
                     </div>
                     <div class="slide">
                         <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
-                    </div>
+                    </div> -->
 
                     <div class="navigation-auto">
                         <div class="auto-btn1"></div>
-                        <div class="auto-btn2"></div>
+                        <!-- <div class="auto-btn2"></div>
                         <div class="auto-btn3"></div>
-                        <div class="auto-btn4"></div>
+                        <div class="auto-btn4"></div> -->
                     </div>
 
                     <div class="navigation-manual">
                         <label for="radio1" class="manual-btn"></label>
-                        <label for="radio2" class="manual-btn"></label>
+                        <!-- <label for="radio2" class="manual-btn"></label>
                         <label for="radio3" class="manual-btn"></label>
-                        <label for="radio4" class="manual-btn"></label>
+                        <label for="radio4" class="manual-btn"></label> -->
                     </div>
                 </div>
             </div>
