Páginas listas para publicar

--- a/index.html
+++ b/index.html
@@ -178,11 +178,7 @@
                         <img src="assets/img/ArticulosChina/ram2gb/ram3.JPG" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
-                        <h3>Mouse inal&aacute;mbrico</h3>
-                        <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
-                    </div>
+
                     <div class="accesorio-pc">
                         <h3>Teclado Genius básico</h3>
                         <img src="assets/img/ArticulosChina/teclado/2.png" alt="">
@@ -194,7 +190,7 @@
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
-                        <h3>Batería recargable</h3>
+                        <h3>Cargador port&aacute;til para celulares</h3>
                         <img src="assets/img/ArticulosCali/Bateríaportátil/3.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
@@ -203,11 +199,11 @@
                         <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <!-- <div class="accesorio-pc">
                         <h3>Mouse LogiTech al&aacute;mbrico</h3>
                         <img src="assets/img/ArticulosCali/MouseM90/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
-                    </div>
+                    </div> -->
                     <div class="accesorio-pc">
                         <h3>Router TP-Link WR840 </h3>
                         <img src="assets/img/ArticulosCali/RouterTP-LinkWR840/1.png" alt="">
