Acomodando hover de header

--- a/index.html
+++ b/index.html
@@ -526,7 +526,9 @@
             <h3>julii1295@gmail.com</h3>
             <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
             <!-- <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a> -->
-            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp"></a>
+            <a href="https://wa.me/c/573174503604" target="_blank">
+                <img src="assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp">
+            </a>
         </div>
 
         <div class="fuentes">
