--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="css/store.css"> -->
     <link rel="stylesheet" href="css/storeia.css">
 
-    <link rel="icon" href="../assets/img/logo-pestaña.ico">
+    <link rel="icon" href="assets/img/logo-pestaña.ico">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
