Agregando la página para blogs

--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
 
-    <!-- <link rel="stylesheet" href="css/store.css"> -->
+    <!-- estilos -->
     <link rel="stylesheet" href="css/storeia.css">
 
+    <!-- imagen de pestaña  -->
     <link rel="icon" href="assets/img/logo-pestaña.ico">
+
+
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!-- eliminando la rama master -->
     <i class="icon-menu burger-button" id="burger-menu"></i>
 
     <header class="header">
