--- a/html/blogs.html
+++ b/html/blogs.html
@@ -5,17 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi pasatiempo</title>
-    <link rel="stylesheet" href="css/blogs.css">
+    <title>Blog</title>
+
+    <!-- estilos  -->
+    <link rel="stylesheet" href="../css/blogs.css">
+
+    <!-- imagen de pestaña  -->
+    <link rel="icon" href="../assets/img/logo-pestaña.ico">
+
+    <link rel="stylesheet" href="../css/font/flaticon.css">
+
+    <!-- fuente  -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <i class="icon-menu burger-button" id="burger-menu"></i>
     <header class="header">
-
-        <div id="menu-h">
-            <img src="assets/img/Logo.png" alt="Logo de mi empresa" title="Logo de mi empresa">
-        </div>
 
         <div id="menu-h">
             <ul>
@@ -24,55 +31,31 @@
                 </li>
             </ul>
         </div>
-
         <div id="menu-h">
             <ul>
                 <li>
-                    <a href="index.html" class="inicio">Noticias</a>
+                    <a href="html/profile.html" class="inicio">Mi perfil</a>
                 </li>
             </ul>
         </div>
-
+        <div id="menu-h">
+            <img src="../assets/img/Logo.png" alt="Logo de la tienda">
+        </div>
     </header>
 
     <main class="contenido">
 
-        <section class="acceso-directo">
-            <div class="temas">
-                <li>
-                    <ul class="item">
-                        item
-                    </ul>
-                </li>
-                <li>
-                    <ul class="item">
-                        item
-                    </ul>
-                </li>
-                <li>
-                    <ul class="item">
-                        item
-                    </ul>
-                </li>
-                <li>
-                    <ul class="item">
-                        item
-                    </ul>
-                </li>
-                <li>
-                    <ul class="item">
-                        item
-                    </ul>
-                </li>
-            </div>
-        </section>
+        <!-- <section class="logo">
+            <img src="../assets/img/Logo.png" alt="Logo de la tienda">
+        </section> -->
+
 
         <section class="publicaciones">
-
+            <h3>publicaciones</h3>
         </section>
 
         <section class="noticias-tecnologicas">
-
+            <h3>noticias tecnologicas</h3>
         </section>
     </main>
 
@@ -80,17 +63,28 @@
 
         <div class="info-desa">
             <h3>Desarrollado por Juli&aacute;n España</h3>
-            <h3>T&eacute;cnico en sistemas </h3>
-            <h3><img src="assets/img/sena.png" alt=""></h3>
+            <h3>T&eacute;cnico en sistemas - SENA</h3>
             <h3>Colón, Putumayo</h3>
+            <!-- <h3><img src="../assets/img/sena.png" alt=""></h3> -->
         </div>
 
         <div class="social-desa">
             <h1>Cont&aacute;ctame:</h1>
             <h3>julii1295@gmail.com</h3>
-            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
-            <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/twitter.png" alt=""></a>
-            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt=""></a>
+            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="../assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
+            <!-- <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a> -->
+            <a href="https://wa.me/c/573174503604" target="_blank">
+                <img src="../assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp">
+            </a>
+        </div>
+
+        <div class="fuentes">
+            <h3>Fuentes:</h3>
+            <p>
+                Icons made by
+                <a href="https://www.freepik.com" target="_blank" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com
+                </a>
+            </p>
         </div>
 
     </footer>
