--- a/html/blogs.html
+++ b/html/blogs.html
@@ -22,40 +22,35 @@
 
 <body>
     <i class="icon-menu burger-button" id="burger-menu"></i>
+
     <header class="header">
 
         <div id="menu-h">
             <ul>
                 <li>
-                    <a href="index.html" class="inicio">Inicio</a>
+                    <a href="../index.html" class="inicio">Inicio</a>
                 </li>
             </ul>
         </div>
         <div id="menu-h">
             <ul>
                 <li>
-                    <a href="html/profile.html" class="inicio">Mi perfil</a>
+                    <a href="profile.html" class="inicio">Mi perfil</a>
                 </li>
             </ul>
-        </div>
-        <div id="menu-h">
-            <img src="../assets/img/Logo.png" alt="Logo de la tienda">
         </div>
     </header>
 
     <main class="contenido">
-
-        <!-- <section class="logo">
+        <section class="logo">
             <img src="../assets/img/Logo.png" alt="Logo de la tienda">
-        </section> -->
-
-
-        <section class="publicaciones">
-            <h3>publicaciones</h3>
         </section>
 
-        <section class="noticias-tecnologicas">
-            <h3>noticias tecnologicas</h3>
+        <section class="noticias">
+            <h3>noticias del valle</h3>
+            <h3>noticias de</h3>
+            <h3>noticias del valle</h3>
+            <h3>noticias del valle</h3>
         </section>
     </main>
 
@@ -88,6 +83,155 @@
         </div>
 
     </footer>
+
+    <script>
+        var counter = 1;
+
+        setInterval(function() {
+            document.getElementById('radio' + counter).checked = true;
+            counter++;
+            if (counter > 4) {
+                counter = 1;
+            }
+        }, 3000)
+
+        // --------------------------------------------------
+
+
+        //menu lateral en 768px
+        const header = document.querySelector('.header');
+        const burgerMenu = document.querySelector('#burger-menu');
+
+        burgerMenu.addEventListener('click', hideShow);
+
+        function hideShow() {
+            if (header.classList.contains('is-active')) {
+                header.classList.remove('is-active');
+
+            } else {
+                header.classList.add('is-active');
+            }
+        }
+
+        //slide de presentación de anuncios
+        var indi = 0;
+
+        $(".page li").eq(indi).css("background-color", "#419CCA");
+
+        $(".page li").click(function() {
+            indi = $(this).index();
+            $(".page li").css("background-color", "#bababa");
+            $(this).css("background-color", "#419CCA");
+            $(".preacce").hide();
+            $(".preacce").eq(indi).fadeIn();
+        });
+
+        $(".dere").click(function() {
+            indi++;
+            if (indi > 2) {
+                indi = 0;
+            }
+            $(".preacce").hide();
+            $(".preacce").eq(indi).fadeIn();
+            $(".page li").css("background-color", "#bababa");
+            $(".page li").eq(indi).css("background-color", "#419CCA");
+        });
+        $(".iz").click(function() {
+            indi--;
+            if (indi < 0) {
+                indi = 1;
+            }
+            $(".preacce").hide();
+            $(".preacce").eq(indi).fadeIn();
+            $(".page li").css("background-color", "#bababa");
+            $(".page li").eq(indi).css("background-color", "#419CCA");
+        });
+
+        setInterval(() => {
+            indi++;
+            // condicional para volver a la imagen 0
+            if (indi > 2) {
+                indi = 0;
+            }
+            $(".preacce").hide();
+            $(".preacce").eq(indi).fadeIn();
+            $(".page li").css("background-color", "#bababa");
+            $(".page li").eq(indi).css("background-color", "#419CCA");
+        }, 1000);
+
+        $(".dere").click(function() {
+            indi++;
+            if (indi > 2) {
+                indi = 0;
+            }
+            $(".preacce").hide();
+            $(".preacce").eq(indi).fadeIn();
+            $(".page li").css("background-color", "#bababa");
+            $(".page li").eq(indi).css("background-color", "#419CCA");
+        });
+
+        $(".iz").click(function() {
+            indi--;
+
+            if (indi < 0) {
+                indi = 2;
+            }
+            $(".preacce").hide();
+            $(".preacce").eq(indi).fadeIn();
+            $(".page li").css("background-color", "yellow");
+            $(".page li").eq(indi).css("background-color", "orange");
+        });
+
+
+        // slide automatico para programas
+        var indice = 0;
+
+        $(".paginacion li").eq(indice).css("background-color", "orange");
+
+        $(".paginacion li").click(function() {
+            indice = $(this).index();
+            $(".paginacion li").css("background-color", "yellow");
+            $(this).css("background-color", "orange");
+            $(".programas-varios").hide();
+            $(".programas-varios").eq(indice).fadeIn();
+        });
+
+        // para que las imagenes se pasen automaticamente
+        setInterval(() => {
+            indice++;
+            // condicional para volver a la imagen 0
+            if (indice > 2) {
+                indice = 0;
+            }
+            $(".programas-varios").hide();
+            $(".programas-varios").eq(indice).fadeIn();
+            $(".paginacion li").css("background-color", "yellow");
+            $(".paginacion li").eq(indice).css("background-color", "orange");
+        }, 4000);
+
+        $(".derecha").click(function() {
+            indice++;
+            // condicional para volver a la imagen 0
+            if (indice > 2) {
+                indice = 0;
+            }
+            $(".programas-varios").hide();
+            $(".programas-varios").eq(indice).fadeIn();
+            $(".paginacion li").css("background-color", "yellow");
+            $(".paginacion li").eq(indice).css("background-color", "orange");
+        });
+        $(".izquierda").click(function() {
+            indice--;
+            // condicional para volver a la imagen 0
+            if (indice < 0) {
+                indice = 2;
+            }
+            $(".programas-varios").hide();
+            $(".programas-varios").eq(indice).fadeIn();
+            $(".paginacion li").css("background-color", "yellow");
+            $(".paginacion li").eq(indice).css("background-color", "orange");
+        });
+    </script>
 </body>
 
 </html>
